# algua

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pip-audit-ignore.txt  AGENTS.md  CLAUDE.md  CODEOWNERS  Dockerfile  Makefile  README.md  SETUP_GUIDE.md  TODOS.md  docker-compose.yml  env.example  environment.yml  environment_minimal.yml  pyproject.toml  run_full_test.py  run_simple_test.py  simple_api.py  simple_test.py  test_components.py  test_error_handling.py  test_error_handling_simple.py  test_order_management.py  test_portfolio_simple.py  test_portfolio_tracking.py  test_risk_management.py  test_visualization.py
.agents/skills/: author-a-strategy  interpret-results  operating-algua  run-the-research-loop
.claude/hooks/: block-push-to-main.sh
.claude/skills/: report-experiments  source-ideas
.codex/agents/: author.toml  interpret.toml
.codex/scripts/: run-research-loop.sh  source-ideas.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  opencode.yml  security.yml
.superpowers/sdd/: task-11-report.md
algua-env/: pyvenv.cfg
algua/audit/: log.py
algua/backtest/: __init__.py  _constants.py  _sample.py  bootstrap.py  core_budget.py  delisting.py  engine.py  factor_eval.py  metrics.py  neff.py  result.py  stamps.py  sweep.py  walkforward.py
algua/calendar/: market_calendar.py
algua/cli/: _common.py  app.py  audit_cmd.py  backtest_cmd.py  data_cmd.py  errors.py  eval_cmd.py  factor_cmd.py  fleet_cmd.py  governance_cmd.py  idea_cmd.py  live_cmd.py  main.py  monitoring_cmd.py  negative_cmd.py  operator_cmd.py  paper_cmd.py  registry_cmd.py  research_batch_cmd.py  research_cmd.py  shadow_cmd.py  strategy_cmd.py
algua/config/: settings.py
algua/contracts/: idea.py  lifecycle.py  model_types.py  net.py  registry_metadata.py  types.py
algua/data/: __init__.py  capabilities.py  constituents.py  contracts.py  corpactions.py  files.py  fundamentals_schema.py  hindsight.py  manifest.py  models.py  news_schema.py  schema.py  serve.py  staging.py  store.py  timeframes.py  verify.py
algua/execution/: alpaca_broker.py  flatten.py  fleet_health.py  lane_exit.py  live_ledger.py  live_reconcile.py  live_reservations.py  live_sizing.py  order_state.py  paper_reconcile.py  reconcile_core.py  schedule.py  sim_broker.py  sizing.py  tick_clock.py
algua/features/: alphas.py  catalogue.py  indicators.py  scaling.py  scaling_fit.py
algua/knowledge/: experience.py  frontmatter.py  governance.py  metrics.py  sync.py  templates.py
algua/live/: live_loop.py  paper_loop.py
algua/models/: __init__.py  registry.py
algua/monitoring/: __init__.py  decay.py  drift.py
algua/observability/: __init__.py  log.py  metrics.py
algua/operator/: alerts.py  diff_policy.py  gitops.py  jobs.py  journal.py  mergeback.py  schedule.py
algua/portfolio/: construction.py
algua/provenance/: __init__.py  lockfile.py
algua/registry/: allocations.py  approvals.py  db.py  family_budget.py  forward_promotion.py  gating.py  human_actor.py  ideas.py  intake.py  lineage.py  live_gate.py  metadata.py  negative_results.py  promotion.py  repository.py  search_breadth.py  store.py  transitions.py
algua/research/: _constants.py  clustering.py  cscv.py  dsr.py  eval_harness.py  factor_fdr.py  family_audit.py  fdr_lord.py  forward_gates.py  gates.py  haircut.py  idea_dedup.py  ideas.py  lifecycle_gc.py  regime.py
algua/risk/: book_breaker.py  book_equity.py  book_limits.py  (+4 more)
api/: __init__.py  dependencies.py  health.py  main.py  models.py
approvers/: allowed_signers
backtesting/: __init__.py  engine.py
brand/: .gitignore  README.md  build.py  tokens.json
configs/: risk_config.json  settings.py  wandb_sweep.yaml
dashboards/: __init__.py  main.py
data_ingestion/: __init__.py  cache_manager.py  collectors.py
docs/: algua-architecture.html  algua-lifecycle.html
domain/: __init__.py
error_handling/: __init__.py  alert_manager.py  error_classifier.py  error_manager.py  health_monitor.py  logging_integration.py  performance_monitor.py  recovery_manager.py
examples/: logging_demo.py
feature_engineering/: __init__.py
forward_testing/: __init__.py
infrastructure/: __init__.py  container.py  interfaces.py
kb/: README.md
live_trading/: __init__.py
logs/: errors.jsonl
models/: __init__.py  strategies.py  strategy_factory.py
notebooks/: .gitkeep
order_management/: __init__.py  execution_engine.py  fill_handler.py  order_lifecycle.py  order_tracker.py  order_types.py  order_validator.py
portfolio/: __init__.py  performance_calculator.py  portfolio_manager.py
portfolio_tracking/: __init__.py  performance_analytics.py  pnl_calculator.py  portfolio_manager.py  portfolio_optimizer.py  portfolio_reporter.py  position_manager.py
risk_management/: __init__.py  configuration.py  drawdown_controls.py  event_system.py  interfaces.py  portfolio_limits.py  position_sizer.py  risk_calculator.py  risk_manager.py  stop_loss.py
scripts/: entrypoint.sh  gate.sh  live_loop.sh  optimize_strategy.py  run.sh  run_backtest.py  run_live_trading.py
tests/: __init__.py  _concurrency_worker.py  _human_actor_helpers.py  conftest.py  test_allocations.py  test_alpaca_broker.py  test_alphas.py  test_approvals_fundamentals.py  test_audit_log.py  test_backtest_costs.py  test_backtest_engine.py  test_backtest_metrics.py  test_backtest_public_api.py  test_backtest_sample.py  test_backtest_series_frame.py  test_backtest_stamps.py  test_backtesting.py  test_bar_producer_conformance.py  test_book_breaker.py  test_book_equity.py  test_book_exit_revoke.py  test_book_limits.py  test_calendar.py  test_capacity_cap.py  test_cli_audit.py  test_cli_backtest.py  test_cli_backtest_fundamentals.py  test_cli_backtest_news.py  test_cli_backtest_pit_eval.py  test_cli_backtest_series.py  test_cli_backtest_tracking.py  test_cli_common.py  test_cli_core.py  test_cli_data.py  test_cli_data_fundamentals.py  test_cli_data_news.py  test_cli_errors.py  test_cli_eval.py  test_cli_factor.py  test_cli_family_audit.py  (+218 more)
utils/: __init__.py  config.py  logging.py
visualization/: __init__.py
(+312 files in other folders)
