[project]
name = "algua"
version = "0.0.1"
description = "Agent-first algotrading research and lifecycle platform"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12,<0.28",  # _click private fork; bump only after verifying test_cli_main smoke tests pass
    "exchange-calendars>=4.5",
    "pandas>=2.2,<3",
    "yfinance>=1.4.1",
    "pyarrow>=15,<24",
    "vectorbt>=0.26",
    "mlflow>=3.1",
]

[project.scripts]
algua = "algua.cli.main:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "mypy>=1.10",
    "import-linter>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["algua"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".claude/worktrees"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# Typer's declarative API requires Option/Argument calls as parameter defaults;
# treat them as immutable so B008 stops firing (drops the scattered per-line noqas).
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.importlinter]
root_package = "algua"

[[tool.importlinter.contracts]]
name = "contracts layer is pure (imports no other algua module)"
type = "forbidden"
source_modules = ["algua.contracts"]
forbidden_modules = [
    "algua.cli",
    "algua.registry",
    "algua.config",
    "algua.calendar",
]

[[tool.importlinter.contracts]]
# provenance is a pure stdlib-only leaf: it holds the ONE locked-dependency hash that both
# the backtest stamps and the registry's live-approval identity share, so both lanes may
# depend on it without crossing a boundary. It must import no other algua.* module.
name = "provenance layer is pure (imports no other algua module)"
type = "forbidden"
source_modules = ["algua.provenance"]
forbidden_modules = [
    "algua.cli",
    "algua.registry",
    "algua.config",
    "algua.calendar",
    "algua.contracts",
    "algua.features",
    "algua.data",
    "algua.backtest",
    "algua.strategies",
]

[[tool.importlinter.contracts]]
name = "calendar stays independent of cli and registry"
type = "forbidden"
source_modules = ["algua.calendar"]
forbidden_modules = ["algua.cli", "algua.registry"]

[[tool.importlinter.contracts]]
name = "features layer is pure (no algua imports beyond contracts)"
type = "forbidden"
source_modules = ["algua.features"]
forbidden_modules = ["algua.cli", "algua.registry", "algua.data", "algua.backtest", "algua.strategies"]

[[tool.importlinter.contracts]]
name = "backtest engine stays off cli, registry, and the data lane"
type = "forbidden"
source_modules = ["algua.backtest"]
forbidden_modules = ["algua.cli", "algua.registry", "algua.data"]

[[tool.importlinter.contracts]]
name = "backtest engine stays off the tracking layer"
type = "forbidden"
source_modules = ["algua.backtest"]
forbidden_modules = ["algua.tracking"]

[[tool.importlinter.contracts]]
name = "backtest engine stays off the research layer"
type = "forbidden"
source_modules = ["algua.backtest"]
forbidden_modules = ["algua.research"]

[[tool.importlinter.contracts]]
name = "execution / live / audit stay off the cli layer"
type = "forbidden"
source_modules = ["algua.execution", "algua.live", "algua.audit"]
forbidden_modules = ["algua.cli"]

[[tool.importlinter.contracts]]
name = "backtest engine stays off the execution and live lanes"
type = "forbidden"
source_modules = ["algua.backtest"]
forbidden_modules = ["algua.execution", "algua.live"]

[[tool.importlinter.contracts]]
name = "risk layer stays off the cli layer"
type = "forbidden"
source_modules = ["algua.risk"]
forbidden_modules = ["algua.cli"]

[[tool.importlinter.contracts]]
# The backtest engine MAY depend on algua.risk.limits — that is the unification the
# "one decision pipeline" claim requires: both the backtester and the live/paper loop run the
# SAME long-only + gross-exposure checks (single source of truth + tolerance) from
# algua.risk.limits. risk.limits is a pure leaf (pandas only, no algua imports), so this adds
# no cycle. The backtest must still NOT touch the stateful risk machinery (kill_switch).
name = "backtest engine stays off the stateful risk machinery (kill_switch)"
type = "forbidden"
source_modules = ["algua.backtest"]
forbidden_modules = ["algua.risk.kill_switch"]

[[tool.importlinter.contracts]]
# The knowledge layer is a pure projection: it reads config + the filesystem vault + MLflow,
# and receives registry state (stage) passed in from the CLI seam — it never imports the
# registry itself, matching how backtest/research/live stay registry-free.
name = "knowledge layer stays off cli, registry, backtest, live, execution"
type = "forbidden"
source_modules = ["algua.knowledge"]
forbidden_modules = [
    "algua.cli", "algua.registry", "algua.backtest", "algua.live", "algua.execution"
]

[[tool.importlinter.contracts]]
name = "pure + execution lanes stay off the knowledge layer"
type = "forbidden"
source_modules = ["algua.backtest", "algua.live", "algua.features", "algua.contracts"]
forbidden_modules = ["algua.knowledge"]
