[project]
name = "algua"
version = "0.0.1"
description = "Agent-first algotrading research and lifecycle platform"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12,<0.28",  # _click private fork; bump only after verifying test_cli_main smoke tests pass
    "exchange-calendars>=4.5",
    "pandas>=2.2,<3",
    "yfinance>=1.4.1",
    "pyarrow>=15,<24",
    "vectorbt>=0.26",
    "scipy>=1.11",  # #211 DSR evidence: norm.cdf/ppf in research.gates + skew/kurtosis in metrics
    "mlflow>=3.1",
    "matplotlib>=3.8",  # #181 series plots (report-experiments); was transitive via mlflow
    "threadpoolctl>=3,<4",
]

[project.scripts]
algua = "algua.cli.main:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "mypy>=1.10",
    "import-linter>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["algua"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".claude/worktrees"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# Typer's declarative API requires Option/Argument calls as parameter defaults;
# treat them as immutable so B008 stops firing (drops the scattered per-line noqas).
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.importlinter]
root_package = "algua"

[[tool.importlinter.contracts]]
name = "contracts layer is pure (imports no other algua module)"
type = "forbidden"
source_modules = ["algua.contracts"]
forbidden_modules = [
    "algua.cli",
    "algua.registry",
    "algua.config",
    "algua.calendar",
    "algua.data",
    "algua.observability",
]

[[tool.importlinter.contracts]]
# The model-artifact registry (#376) is a leaf filesystem-I/O layer, like data: it is the
# system-of-record for trained model versions. The strategy loader and the MLflow tracker are its
# only resolve/ingress callers. It may import algua.contracts (the pure model types) and, lazily,
# algua.config (for the data_dir root), but must stay OFF every higher/heavier layer so a model
# lookup never pulls in the engine, the registry lifecycle, or the trading lanes.
name = "models layer is a leaf (imports no higher algua module)"
type = "forbidden"
source_modules = ["algua.models"]
forbidden_modules = [
    "algua.cli",
    "algua.registry",
    "algua.calendar",
    "algua.features",
    "algua.data",
    "algua.backtest",
    "algua.strategies",
    "algua.research",
    "algua.live",
    "algua.execution",
    "algua.risk",
    "algua.audit",
    "algua.tracking",
    "algua.observability",
]

[[tool.importlinter.contracts]]
# provenance is a pure stdlib-only leaf: it holds the ONE locked-dependency hash that both
# the backtest stamps and the registry's live-approval identity share, so both lanes may
# depend on it without crossing a boundary. It must import no other algua.* module.
name = "provenance layer is pure (imports no other algua module)"
type = "forbidden"
source_modules = ["algua.provenance"]
forbidden_modules = [
    "algua.cli",
    "algua.registry",
    "algua.config",
    "algua.calendar",
    "algua.contracts",
    "algua.features",
    "algua.data",
    "algua.backtest",
    "algua.strategies",
    "algua.observability",
]

[[tool.importlinter.contracts]]
# observability (structured JSON logging, #346) is a pure stdlib-only leaf: cli/execution/live/
# risk may depend on it for telemetry, but it must import no other algua.* module so it never
# pulls a heavy or stateful layer into a logging call site.
name = "observability layer is pure (imports no other algua module)"
type = "forbidden"
source_modules = ["algua.observability"]
forbidden_modules = [
    "algua.cli",
    "algua.registry",
    "algua.config",
    "algua.calendar",
    "algua.contracts",
    "algua.features",
    "algua.data",
    "algua.backtest",
    "algua.strategies",
    "algua.research",
    "algua.live",
    "algua.execution",
    "algua.risk",
    "algua.audit",
    "algua.knowledge",
    "algua.portfolio",
    "algua.tracking",
    "algua.provenance",
]

[[tool.importlinter.contracts]]
name = "calendar stays independent of cli and registry"
type = "forbidden"
source_modules = ["algua.calendar"]
forbidden_modules = ["algua.cli", "algua.registry"]

[[tool.importlinter.contracts]]
name = "features layer is pure (no algua imports beyond contracts)"
type = "forbidden"
source_modules = ["algua.features"]
forbidden_modules = ["algua.cli", "algua.registry", "algua.data", "algua.backtest", "algua.strategies", "algua.observability"]

[[tool.importlinter.contracts]]
# The PIT feature-scaler FITTERS (issue #388) derive statistics from data, so they are the one
# place a scaler can be fit. They must be structurally unreachable from any runtime/decision lane
# — otherwise a strategy could refit a scaler at serve time over the whole (incl. future) series,
# the classic train/serve-skew leak. `algua.features.scaling` (FrozenScaler + transform) stays
# importable by serve; only `algua.features.scaling_fit` is walled off here.
name = "scaler fitters (scaling_fit) are unreachable from runtime/decision lanes"
type = "forbidden"
source_modules = [
    "algua.strategies", "algua.backtest", "algua.live", "algua.execution", "algua.research",
]
forbidden_modules = ["algua.features.scaling_fit"]

[[tool.importlinter.contracts]]
name = "portfolio construction layer is pure (no algua imports beyond contracts + features)"
type = "forbidden"
source_modules = ["algua.portfolio"]
forbidden_modules = [
    "algua.cli", "algua.registry", "algua.data", "algua.backtest", "algua.strategies",
    "algua.live", "algua.execution", "algua.tracking", "algua.research", "algua.knowledge",
    "algua.observability",
]

[[tool.importlinter.contracts]]
name = "backtest engine stays off cli, registry, and the data lane"
type = "forbidden"
source_modules = ["algua.backtest"]
forbidden_modules = ["algua.cli", "algua.registry", "algua.data"]

[[tool.importlinter.contracts]]
name = "backtest engine stays off the tracking layer"
type = "forbidden"
source_modules = ["algua.backtest"]
forbidden_modules = ["algua.tracking"]

[[tool.importlinter.contracts]]
name = "backtest engine stays off the research layer"
type = "forbidden"
source_modules = ["algua.backtest"]
forbidden_modules = ["algua.research"]

[[tool.importlinter.contracts]]
# The dependency runs ONE way: the registry composes research (promotion gates, idea pool), never
# the reverse. research is pure evaluation/scoring — it must not reach back into lifecycle state.
# Stated as its own contract so the correct direction survives a future refactor (issue #170).
name = "research never imports registry"
type = "forbidden"
source_modules = ["algua.research"]
forbidden_modules = ["algua.registry"]

[[tool.importlinter.contracts]]
name = "execution / live / audit stay off the cli layer"
type = "forbidden"
source_modules = ["algua.execution", "algua.live", "algua.audit"]
forbidden_modules = ["algua.cli"]

[[tool.importlinter.contracts]]
name = "backtest engine stays off the execution and live lanes"
type = "forbidden"
source_modules = ["algua.backtest"]
forbidden_modules = ["algua.execution", "algua.live"]

[[tool.importlinter.contracts]]
name = "risk layer stays off the cli layer"
type = "forbidden"
source_modules = ["algua.risk"]
forbidden_modules = ["algua.cli"]

[[tool.importlinter.contracts]]
# The backtest engine MAY depend on algua.risk.limits — that is the unification the
# "one decision pipeline" claim requires: both the backtester and the live/paper loop run the
# SAME long-only + gross-exposure checks (single source of truth + tolerance) from
# algua.risk.limits. risk.limits is a pure leaf (pandas only, no algua imports), so this adds
# no cycle. The backtest must still NOT touch the stateful risk machinery (kill_switch).
name = "backtest engine stays off the stateful risk machinery (kill_switch)"
type = "forbidden"
source_modules = ["algua.backtest"]
forbidden_modules = ["algua.risk.kill_switch"]

[[tool.importlinter.contracts]]
# The knowledge layer is a pure projection: it reads config + the filesystem vault + MLflow,
# and receives registry state (stage) passed in from the CLI seam — it never imports the
# registry itself, matching how backtest/research/live stay registry-free.
name = "knowledge layer stays off cli, registry, backtest, live, execution"
type = "forbidden"
source_modules = ["algua.knowledge"]
forbidden_modules = [
    "algua.cli", "algua.registry", "algua.backtest", "algua.live", "algua.execution"
]

[[tool.importlinter.contracts]]
name = "pure + execution lanes stay off the knowledge layer"
type = "forbidden"
source_modules = ["algua.backtest", "algua.live", "algua.features", "algua.contracts"]
forbidden_modules = ["algua.knowledge"]

[[tool.importlinter.contracts]]
# Strategy modules are pure authored functions — they receive ALL data (bars, fundamentals) via the
# engine, never by importing the data layer. Without this, a strategy could import the hindsight
# accessor straight into compute_weights (issue #132 — the worst leak in the platform).
name = "strategies layer stays off the data lane"
type = "forbidden"
source_modules = ["algua.strategies"]
forbidden_modules = ["algua.data"]

[[tool.importlinter.contracts]]
# The hindsight (full-future) fundamentals accessor must be structurally unreachable from any lane
# that can influence a trading decision. Stated directly so it survives a future relocation.
name = "hindsight fundamentals accessor is unreachable from decision lanes"
type = "forbidden"
source_modules = [
    "algua.backtest", "algua.features", "algua.contracts",
    "algua.strategies", "algua.live", "algua.execution",
]
forbidden_modules = ["algua.data.hindsight"]

[[tool.importlinter.contracts]]
# Live/execution receive market data via the CLI composition seam, never by importing algua.data.
# Barring them COMPLETES the data wall: every decision/execution lane is now off algua.data —
# backtest, features, strategies, and contracts are barred by their OWN contracts above; this adds
# the last two (live, execution). So NO such lane can reach an unmasked full-history read
# (algua.data.store.read_news / read_fundamentals); only the walled hindsight accessors and the CLI
# may. (issue #132 — news hindsight slice.)
name = "live and execution stay off the data lane"
type = "forbidden"
source_modules = ["algua.live", "algua.execution"]
forbidden_modules = ["algua.data"]

[[tool.importlinter.contracts]]
# The CLI is a thin JSON seam: command modules must not import one another (domain logic belongs in
# the layer that owns it, shared CLI helpers in cli._common/app/errors). This kills paper/live
# gating drift at the structural level (issue #165). Shared infra (app, _common, errors, main) is
# NOT listed, so command modules may still import it.
name = "cli command modules are independent of one another (no cli->cli sibling imports)"
type = "independence"
modules = [
    "algua.cli.backtest_cmd",
    "algua.cli.data_cmd",
    "algua.cli.factor_cmd",
    "algua.cli.fleet_cmd",
    "algua.cli.idea_cmd",
    "algua.cli.live_cmd",
    "algua.cli.monitoring_cmd",
    "algua.cli.negative_cmd",
    "algua.cli.paper_cmd",
    "algua.cli.registry_cmd",
    "algua.cli.research_cmd",
    "algua.cli.shadow_cmd",
    "algua.cli.strategy_cmd",
]

[[tool.importlinter.contracts]]
# The shadow lane (#392) is an ADVISORY champion-challenger evaluator: it replays a strategy through
# an in-process SimBroker and records hypothetical, order-free P&L. It must be STRUCTURALLY incapable
# of reaching a real order, a real allocation, or the risk kill-switch/global-halt. Forbidding the
# whole `algua.live` lane (not just the submit loop) is deliberate: shadow re-composes the pure
# decision primitives (strategy.target_weights + algua.risk.limits) rather than importing
# paper_loop.decide, so no future edit can quietly pull the live submit path into shadow.
name = "shadow lane cannot reach real orders, allocations, or the risk machinery"
type = "forbidden"
source_modules = ["algua.shadow"]
forbidden_modules = [
    "algua.cli",
    "algua.data",
    "algua.live",
    "algua.execution.alpaca_broker",
    "algua.execution.live_ledger",
    "algua.execution.live_reservations",
    "algua.execution.live_reconcile",
    "algua.execution.paper_reconcile",
    "algua.risk.kill_switch",
    "algua.risk.global_halt",
    "algua.registry.allocations",
    "algua.registry.live_gate",
]

[[tool.importlinter.contracts]]
# The real trading + research lanes stay OFF the advisory shadow lane: a promotion gate, the
# live/paper loop, or the backtester must never read a shadow evaluation as if it were authoritative
# evidence. Shadow output is a decision aid for a human/agent, never a gate input.
name = "trading and research lanes stay off the advisory shadow lane"
type = "forbidden"
source_modules = ["algua.live", "algua.execution", "algua.backtest", "algua.registry"]
forbidden_modules = ["algua.shadow"]
